게임방법, 게임시작 버튼 구현, 구구단송 듣기 버튼 구현 + 게임방법 눌렀을때 팝업창으로 게임방법설명 나올 수 있게 구현 + 팝업창 닫기 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QuizApp</string>
+    <string name="game_rules">게임 방법 설명이 길어질 수도 있으니 우선
+        \n이렇게 파일로 만들어 두겠습니다!!</string>
 </resources>
