1. (기존) AndroidManifest.xml QuizActivity.kt 액티비티 추가
2. (기존) strings.xml
질문 및 progress bar 문제 개수 string 추가

3. (추가) xml 파일
버튼 배경색 추가

4. (추가) 나머지 파일
퀴즈 구현 코드

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">QuizApp</string>
     <string name="game_rules">게임 방법 설명이 길어질 수도 있으니 우선
         \n이렇게 파일로 만들어 두겠습니다!!</string>
+
+    <string name="question">구구단 퀴즈</string>
+    <string name="count_label">%d/%d</string>
+    <string name="submit">%s</string>
 </resources>
