--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">QuizApp</string>
-    <string name="game_rules">게임 방법 설명이 길어질 수도 있으니 우선
-        \n이렇게 파일로 만들어 두겠습니다!!</string>
+    <string name="game_rules">화면에 나오는 문제를 잘 보고, 구구단 퀴즈를 풀어보아요.\n게임이 모두 끝난 후, 결과창에서 나의 점수를 확인할 수 있고, 몇초만에 풀었는지 확인할 수 있어요.\n구구단 실력을 열심히 키우고 노래도 따라부르며, 구구단을 공부해볼까요?</string>
 
     <string name="question">구구단 퀴즈</string>
     <string name="count_label">%d/%d</string>
